--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap");
+
+html, body {
+  height: 100%;
+  background-color: #c5c2c2;
+}
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+p{
+  font-size: 20px;
+  font-weight: 400;
+}
+
