feat: Alterações no layout e novos componentes

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<mat-toolbar color="primary" class="mat-elevation-z8" style="margin-top: 50px">
+  <img
+    src="https://redeverao.com.br/logofundotransparente.png"
+    alt="Rede Verão"
+    width="100px"
+  />
+
+  <div class="spacer"></div>
+
+  <ul class="list-format">
+    <li style="margin-right: 15px;">
+      <a href="https://www.instagram.com/postoveraoeunapolis/" target="_blank">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+          alt="Instagram"
+          width="25px"
+          height="25px"
+        />
+      </a>
+    </li>
+    <li>
+      <a href="https://www.facebook.com/postoveraoeunapolis/" target="_blank">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png"
+          alt="Facebook"
+          width="25px"
+          height="25px"
+        />
+      </a>
+    </li>
+  </ul>
+</mat-toolbar>
