--- a/src/app/google-maps/google-maps.component.css
+++ b/src/app/google-maps/google-maps.component.css
@@ -1,25 +1,21 @@
-.card-principal-info {
+.full {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
   align-items: center;
   text-align: center;
-  margin-bottom: 50px;
 }
 
-.card-mat {
+.card-map {
   display: flex;
-  flex-direction: column;
+  width: 600px;
+  height: 600px;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
+  margin-top: 50px;
   border-radius: 20px;
   -webkit-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
-}
-
-.mat-content {
-  display: flex;
-  margin-top: 10px;
-  flex-direction: column;
-  align-items: center;
+  margin: auto;
 }
