--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-carousel [images]="images" [slideAuto]="true"></app-carousel>
 <app-shell-box-about></app-shell-box-about>
 <app-about></app-about>
+<app-google-maps></app-google-maps>
 <app-footer></app-footer>
