--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -12,6 +12,12 @@
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
+}
+
+.card-mat:hover {
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  margin: 10px;
   -webkit-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
