--- a/src/app/components/google-maps/google-maps.component.css
+++ b/src/app/components/google-maps/google-maps.component.css
@@ -14,6 +14,13 @@
   align-items: center;
   margin-top: 50px;
   border-radius: 20px;
+  margin: auto;
+}
+
+.card-map:hover {
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  margin: 20px;
   -webkit-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
   box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
