--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <app-carousel [images]="images" [slideAuto]="true"></app-carousel>
 <app-shell-box-about></app-shell-box-about>
 <app-about></app-about>
