--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 html, body {
   height: 100%;
-  background-color: #c5c2c2;
+  background-color: #FFFFFF;
 }
 
 body {
@@ -15,9 +15,5 @@ body {
 p{
   font-size: 20px;
   font-weight: 400;
-}
-
-@media (min-width: 768px) {
-  
 }
 
