--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,6 +5,37 @@ mat-card {
   max-height: 600px;
 }
 
+.login-card {
+  height: 100%;
+  background: rgb(64,71,71);
+  background: linear-gradient(90deg, rgba(64,71,71,1) 4%, rgba(34,193,195,1) 34%, rgba(8,255,57,1) 100%);
+  background-size: 300% 300%;
+  animation: colors 15s ease infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  width: 400px;
+  height: 400px;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 50px;
+  border-radius: 20px;
+}
+
+.card-container:hover {
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  margin: 20px;
+  -webkit-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
+  box-shadow: 6px 11px 28px 0px rgba(0,0,0,0.75);
+}
+
 .header{
   text-align: center;
 
@@ -40,4 +71,16 @@ mat-card {
   float: right;
   padding-right: 60px;
   text-decoration: none;
+}
+
+@keyframes colors{
+  0%{
+    background-position: 0% 50%;
+  }
+  50%{
+    background-position: 100% 50%;
+  }
+  100%{
+    background-position: 0% 50%;
+  }
 }
