feat: Alterações na aplicação

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,12 @@
 <div class="login-card">
+  <div class="btn-back">
+    <button mat-mini-fab color="primary" routerLink="/">
+      <mat-icon>
+        arrow_left
+      </mat-icon>
+    </button>
+  </div>
+
   <mat-card class="card-container">
     <mat-card-content>
       <div class="header">
