--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,12 @@
 mat-card {
   max-width: 600px;
-  margin: 2em auto;
   text-align: center;
   max-height: 600px;
+}
+
+.btn-back {
+  display: flex;
+  margin-right: 10px;
 }
 
 .login-card {
