feat: Alteração no html

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="card-principal-info">
+<div class="card-principal-info" id="about">
   <mat-card class="card-mat">
     <img src="https://pr0.nicelocal.br.com/24-oilxLQoh-o6dmy0EIIQ/2172x1500,q75/4px-BW84_n0QJGVPszge3NRBsKw-2VcOifrJIjPYFYkOtaCZxxXQ2U81yBlO6oqzpvtRkpyN_6mZsHZx2FUiBHoAAci1HORhng-Jngu12nu96shOZJS2og" width="600px" alt="Shell Box">
     <mat-card-content class="mat-content">
