--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     width="100px"
   />
 
-  <div class="spacer"></div>
+  <div class="spacer" id="contact"></div>
 
   <ul class="list-format">
     <li style="margin-right: 15px;">
