--- a/src/app/components/shell-box-about/shell-box-about.component.html
+++ b/src/app/components/shell-box-about/shell-box-about.component.html
@@ -1,5 +1,5 @@
 <section class="section-big-card">
-  <div class="card-principal-info" >
+  <div class="card-principal-info" id="shellBox">
     <mat-card class="card-mat">
       <mat-card-header>
         <mat-card-title>Shell Box</mat-card-title>
